[tool.poetry]
name = "creative-tools"
version = "0.1.0"
description = ""
authors = ["dnl-strnl <129630837+dnl-strnl@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.11"
clip-interrogator = "^0.6.0"
datasets = "^2.17.0"
hydra-core = "^1.3.2"
milvus = "^2.3.5"
numpy = "^1.26.4"
omegaconf = "^2.3.0"
pillow = "^10.2.0"
torch = ">=2.6.0,<3.0.0"
torchserve = ">=0.8.1"
torchmetrics = ">=1.6.1,<2.0.0"
torchvision = ">=0.21.0,<0.22.0"
tqdm = "^4.66.2"
pycocotools = "^2.0.7"
opencv-python = "^4.9.0.80"
matplotlib = "^3.8.3"
timm = "^0.9.16"
transformers = "^4.37.2"
dvc = "^3.30.0"
dvclive = "^3.30.0"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"
selenium = "^4.22.0"
moviepy = "^1.0.3"
chromadb = "^0.5.23"
flask = "^3.1.0"
diffusers = "^0.32.1"
accelerate = "^1.2.1"
torch-model-archiver = "^0.12.0"

[tool.poetry.group.dev.dependencies]
pytest = "^5.2"

[[tool.poetry.packages]]
include = "creative_tools"
from = "src"

[tool.poetry.scripts]
create = "creative_tools.cli:main"
